<resources>
    <string name="app_name">Club Manager</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_map">Map</string>
    <string name="title_payments">Payments</string>
    <string name="title_settings">Settings</string>
    
    <!-- Authentication -->
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    
    <!-- Event Management -->
    <string name="create_event">Create Event</string>
    <string name="event_title_hint">Event Title</string>
    <string name="event_description_hint">Event Description</string>
    <string name="event_location_hint">Location</string>
    <string name="event_date_hint">Date</string>
    <string name="event_time_hint">Time</string>
    <string name="event_price_hint">Price</string>
    
    <string name="confirm_location">Confirm Location</string>
    <string name="select_location">Select Location</string>
    <string name="join_event">Join Event</string>
    <string name="make_payment">Make Payment</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="event_details">Event Details</string>
</resources>