<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fiestafy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.fiestafy.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.fiestafy.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_payments"
        android:name="com.example.fiestafy.ui.payments.PaymentsFragment"
        android:label="@string/title_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.fiestafy.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.fiestafy.ui.settings.AboutFragment"
        android:label="Acerca de"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_announcements"
        android:name="com.example.fiestafy.ui.settings.AnnouncementsFragment"
        android:label="Tablón de anuncios"
        tools:layout="@layout/fragment_announcements" />

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.fiestafy.ui.settings.EditProfileFragment"
        android:label="Editar perfil"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>